fixed flex wrap inside create.html with every screen size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -404,6 +404,9 @@ label{
 .w-75{
     width: 75%;
 }
+.w-100{
+    width: 100%;
+}
 
 .game-create-type{
     label{
